<resources>
    <string name="app_name">loginsdk</string>
    <string name="text_login_way">로그인 방식을 선택하세요</string>
    <string name="text_login_agreement">我已经详细阅读并同意游戏用户协议和隐私政策</string>
    <string name="text_privacy">개인 정보 수집 및 이용 동의</string>
    <string name="text_user_privacys">隐私政策</string>
    <string name="text_agreement">모바일 서비스 이용약관 동의</string>
    <string name="text_detail">(필수)</string>
    <string name="text_details">(필수)</string>
    <string name="text_user_agreement">用户协议</string>
    <string name="text_login">로그인</string>
    <string name="text_facebook">Facebook &#160;계정으로 로그인</string>
    <string name="text_google">Google&#160;계정으로 로그인</string>
    <string name="text_user_privacy">게임 이용 약관</string>
    <string name="text_into_game">동의</string>
    <string name="facebook_test_app_id">336966757143644</string>
    <string name="fb_login_test_protocol_scheme">10e2be01b323f2c4d7b5c408b534946d</string>
    <string name="text_parameter_error">参数错误</string>
    <string name="text_login_failed">로그인 실패, 다시 시도하시겠습니까?	</string>
    <string name="txt_default">default</string>
    <string name="txt_attention">알림</string>
    <string name="text_sure">확인</string>
    <string name="text_logout">회원 탈퇴됀 계정입니다.</string>
    <string name="text_seal_number">정지됀 계정입니다. 고객센터에 문의해주세요.</string>
    <string name="text_sealing_equipment">차단됀 단말기입니다. 고객센터에 문의해주세요.</string>
</resources>
