<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_360"
    android:layout_height="@dimen/dp_230"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/text_user_privacy"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/ryt_privacy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/txt_title"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_17"
        android:background="@drawable/bg_privacy"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ckb_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:button="@drawable/bg_privacy_selector" />

        <TextView
            android:id="@+id/txt_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_toEndOf="@+id/ckb_agreement"
            android:text="@string/text_details"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_11"
            android:layout_toEndOf="@+id/txt_agreement"
            android:text="@string/text_agreement"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:src="@drawable/ic_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ryt_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/ryt_privacy"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_30"
        android:background="@drawable/bg_privacy">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ckb_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:button="@drawable/bg_privacy_selector"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_toEndOf="@+id/ckb_privacy"
            android:text="@string/text_detail"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_11"
            android:layout_toEndOf="@+id/txt_privacy"
            android:text="@string/text_privacy"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            tools:ignore="RelativeOverlap" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_20"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_into_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGray"
        android:text="@string/text_into_game"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>
